--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Dirty Nguyen Cinema</title>
+    <title>CINEPLEXX</title>
   </head>
   <body>
     <div id="root"></div>
